re PR debug/45673 (-fcompare-debug failure with minor difference in dumps)

PR debug/45673
PR debug/45604
PR debug/45419
PR debug/45408
* tree-pretty-print.c (dump_generic_node): Explicitly dump the
type of MEM_REFs to INTEGER_CSTs.

From-SVN: r165149